# Graphics-Programming

./: .gitignore  README.md  REFERENCES.md
Coursework/Pathtracer/: PhasScene_Updated.blend
Coursework/Rasteriser/: CMakeLists.txt
Coursework/Rasteriser/source/: ChromaticAberration.hpp  LinAlg.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  Shading.hpp  TriangleRenderer.hpp  rasteriser.cpp
Coursework/Raytracer/: BVHNode.hpp  CMakeLists.txt  Camera.hpp  GeomUtil.hpp  GlassShader.hpp  LambertianShader.hpp  TexturedLambertianShader.hpp  TexturedPhongShader.hpp  main.cpp
Coursework/Raytracer/config/: config.json
Labs/week1/: Task1.cpp  Task2.cpp
Labs/week2/: Task1.cpp  Vector3.hpp
Labs/week3/: Task1.cpp  Vector2.hpp  Vector3.hpp
Labs/week4/: Task1.cpp
Labs/week5/: Light.hpp  Task1.cpp
Labs/week6/: Task1.cpp
Labs/week8/: Shading.hpp  Task1.cpp
Labs/week9/: SphereTracer.cpp
Rasteriser/: CMakeLists.txt
Rasteriser/source/: LinAlg.hpp  Material.hpp  MeshRenderer.hpp  Triangle.hpp  TriangleRenderer.hpp  rasteriser.cpp
Raytracer/: BVHNode.hpp  CMakeLists.txt  GeomUtil.hpp  main.cpp
Raytracer/config/: config.json
